changed order of styles to see specificity and added another same selector to see cascading style

--- a/main.css
+++ b/main.css
@@ -2,11 +2,15 @@
   background: #ff1b68;
 }
 
+.section-title {
+  color: #2ddf5c;
+}
+
 h1 {
   color: white;
   font-family: 'Anton', sans-serif;
 }
 
-.section-title {
-  color: #2ddf5c;
+h1 {
+  font-family: sans-serif;
 }
