--- a/main.css
+++ b/main.css
@@ -8,13 +8,14 @@ body {
 
 .section-title {
   color: #2ddf5c;
+  /* font-family: inherit; */
 }
 
-h1 {
+#product-overview h1 {
   color: white;
   font-family: 'Anton', sans-serif;
 }
 
-/* h1 {
+h1 {
   font-family: sans-serif;
-} */
+}
