border shorthand property

--- a/main.css
+++ b/main.css
@@ -6,6 +6,9 @@ body {
 #product-overview {
   background: #ff1b68;
   padding: 20px;
+  /* border-width: 5px;
+  border-color: black;
+  border-style: solid; */
   border: 5px black solid;
   margin: 20px;
 }
