--- a/main.css
+++ b/main.css
@@ -5,12 +5,8 @@ body {
 
 #product-overview {
   background: #ff1b68;
-  padding: 20px;
-  /* border-width: 5px;
-  border-color: black;
-  border-style: solid; */
-  border: 5px black solid;
-  margin: 20px;
+  width: 100%;
+  height: 528px;
 }
 
 .section-title {
