--- a/main.css
+++ b/main.css
@@ -27,3 +27,9 @@ body {
 /* h1 {
   font-family: sans-serif;
 } */
+
+.main-header {
+  width: 100%;
+  background: #2ddf5c;
+  padding: 8px 16px;
+}
