applied display property to main header div and main nav to sit the logo and the nav next to each other

--- a/main.css
+++ b/main.css
@@ -34,6 +34,14 @@ body {
   padding: 8px 16px;
 }
 
+.main-header > div {
+  display: inline-block;
+}
+
+.main-nav {
+  display: inline-block;
+}
+
 .main-nav__item {
   display: inline-block;
 }
