--- a/main.css
+++ b/main.css
@@ -40,6 +40,14 @@ body {
 
 .main-nav {
   display: inline-block;
+  text-align: right;
+  width: calc(100% - 49px);
+}
+
+.main-nav__items {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .main-nav__item {
