--- a/main.css
+++ b/main.css
@@ -38,10 +38,17 @@ body {
   display: inline-block;
 }
 
+.main-header__brand {
+  color: #0e4f1f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 22px;
+}
+
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 54px);
+  width: calc(100% - 74px);
 }
 
 .main-nav__items {
