styled anchor tags inside the main nav item

--- a/main.css
+++ b/main.css
@@ -61,4 +61,10 @@ body {
 
 .main-nav__item {
   display: inline-block;
+  margin: 0 16px;
+}
+
+.main-nav__item a {
+  color: #0e4f1f;
+  text-decoration: none;
 }
