--- a/main.css
+++ b/main.css
@@ -68,3 +68,11 @@ body {
   color: #0e4f1f;
   text-decoration: none;
 }
+
+.main-nav__item a:hover {
+  color: white;
+}
+
+.main-nav__item a:active {
+  color: white;
+}
