used ::first-letter and ::after pseudo elements

--- a/main.css
+++ b/main.css
@@ -69,6 +69,11 @@ body {
   text-decoration: none;
 }
 
+/* .main-nav__item a::after {
+  content: ' (link)';
+  color: red;
+} */
+
 .main-nav__item a:hover {
   color: white;
 }
@@ -76,3 +81,8 @@ body {
 .main-nav__item a:active {
   color: white;
 }
+
+/* p::first-letter {
+  color: red;
+  font-size: 20px;
+} */
