grouped rule for main nav item anchor tags in hover and active states

--- a/main.css
+++ b/main.css
@@ -74,10 +74,7 @@ body {
   color: red;
 } */
 
-.main-nav__item a:hover {
-  color: white;
-}
-
+.main-nav__item a:hover,
 .main-nav__item a:active {
   color: white;
 }
