--- a/main.css
+++ b/main.css
@@ -67,6 +67,8 @@ body {
 .main-nav__item a {
   color: #0e4f1f;
   text-decoration: none;
+  font-weight: bold;
+  padding: 3px 0;
 }
 
 /* .main-nav__item a::after {
@@ -77,6 +79,7 @@ body {
 .main-nav__item a:hover,
 .main-nav__item a:active {
   color: white;
+  border-bottom: 5px solid white;
 }
 
 /* p::first-letter {
