applied styles to cta button in normal, hover and active states

--- a/main.css
+++ b/main.css
@@ -76,3 +76,17 @@ body {
   color: white;
   border-bottom: 5px solid white;
 }
+
+.main-nav__item--cta a {
+  color: white;
+  background: #ff1b68;
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+  color: #ff1b68;
+  background: white;
+  border: none;
+}
