--- a/main.css
+++ b/main.css
@@ -24,6 +24,16 @@ body {
   font-family: 'Anton', sans-serif;
 }
 
+.plan {
+  background: #d5ffdc;
+  text-align: center;
+  padding: 16px;
+  margin: 8px;
+  display: inline-block;
+  width: 30%;
+  vertical-align: middle;
+}
+
 /* h1 {
   font-family: sans-serif;
 } */
