--- a/main.css
+++ b/main.css
@@ -35,6 +35,12 @@ body {
   vertical-align: middle;
 }
 
+.plan--highlighted {
+  background: #19b84c;
+  color: white;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
 /* h1 {
   font-family: sans-serif;
 } */
