--- a/main.css
+++ b/main.css
@@ -41,6 +41,14 @@ body {
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
+.plan__annotation {
+  background: white;
+  color: #19b84c;
+  padding: 8px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+}
+
 /* h1 {
   font-family: sans-serif;
 } */
