added classes to the list items

--- a/main.css
+++ b/main.css
@@ -49,6 +49,12 @@ body {
   border-radius: 8px;
 }
 
+.plan__features {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 /* h1 {
   font-family: sans-serif;
 } */
