--- a/main.css
+++ b/main.css
@@ -98,6 +98,13 @@ body {
 
 #key-features {
   background: #ff1b68;
+  margin-top: 80px;
+  padding: 16px;
+}
+
+#key-features .section-title {
+  color: white;
+  margin: 32px;
 }
 
 /* h1 {
