styled key-feature, key-feature__list & key-feature__description

--- a/main.css
+++ b/main.css
@@ -107,6 +107,26 @@ body {
   margin: 32px;
 }
 
+.key-feature__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.key-feature {
+  display: inline-block;
+  width: 30%;
+  vertical-align: top;
+}
+
+.key-feature__description {
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  font-size: 20px;
+}
+
 /* h1 {
   font-family: sans-serif;
 } */
