--- a/main.css
+++ b/main.css
@@ -120,6 +120,15 @@ body {
   vertical-align: top;
 }
 
+.key-feature__image {
+  background: #ffcede;
+  width: 128px;
+  height: 128px;
+  border: 2px solid #424242;
+  border-radius: 50%;
+  margin: auto;
+}
+
 .key-feature__description {
   text-align: center;
   font-weight: bold;
