added class main-footer + styled it

--- a/main.css
+++ b/main.css
@@ -202,3 +202,9 @@ body {
   background: white;
   border: none;
 }
+
+.main-footer {
+  background: black;
+  padding: 32px;
+  margin-top: 48px;
+}
