--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,3 +1,17 @@
 main {
   padding-top: 32px;
 }
+
+.package {
+  width: 80%;
+  margin: 16px 0;
+  border: 4px solid #0e4f1f;
+  border-left: none;
+}
+
+.package a {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  padding: 32px;
+}
