--- a/packages/packages.css
+++ b/packages/packages.css
@@ -9,6 +9,12 @@ main {
   border-left: none;
 }
 
+.package:hover,
+.package:active {
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  border-color: #ff5454;
+}
+
 .package a {
   text-decoration: none;
   color: inherit;
@@ -25,4 +31,25 @@ main {
   border: 1px solid #0e4f1f;
   font-size: 20px;
   color: #0e4f1f;
+  background: white;
+}
+
+#plus {
+  background: rgba(213, 255, 220, 0.95);
+}
+
+#free {
+  background: rgba(234, 252, 237, 0.95);
+}
+
+#premium {
+  background: rgba(14, 79, 31, 0.95);
+}
+
+#premium .package__title {
+  color: white;
+}
+
+#premium .package__subtitle {
+  color: #bbb;
 }
