--- a/packages/packages.css
+++ b/packages/packages.css
@@ -13,6 +13,7 @@ main {
 .package:active {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   border-color: #ff5454;
+  /* border-color: #ff5454 !important;  */
 }
 
 .package a {
@@ -48,6 +49,12 @@ main {
   border-right: none;
   border-left: 4px solid #0e4f1f;
   text-align: right;
+}
+
+/* cleaner solution */
+#free:hover,
+#free:active {
+  border-left-color: #ff5454;
 }
 
 #premium {
