centered the div with the class plan__list in the screen

--- a/main.css
+++ b/main.css
@@ -16,6 +16,11 @@
   font-family: 'Anton', sans-serif;
 }
 
+.plan__list {
+  width: 80%;
+  margin: auto;
+}
+
 .plan {
   background: #d5ffdc;
   text-align: center;
